# launcher

./: .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  splashscreen.json
src-tauri/src/: lib.rs  logger.rs  main.rs  startup.rs
src/components/: AppErrorBoundary.tsx  AuthGate.tsx  Button.tsx  PanelBackground.tsx  UserBadge.tsx  WindowBottomBar.tsx  WindowTitleBar.tsx
src/components/dev/: CrashTest.tsx
src/layouts/: App.tsx  Window.tsx
src/lib/: bootstrap.ts  logger.ts  tauri.ts
src/lib/api/: auth.ts  client.ts  error.ts
src/locales/: en.json  fr.json  index.ts
src/pages/: CheckingSessionPage.tsx  Home.tsx  Login.tsx  SplashScreen.tsx
src/providers/: AppProviders.tsx  AuthProvider.tsx  BootstrapProvider.tsx  ThemeProvider.tsx
src/store/: authToken.ts
src/types/: auth.ts  bootstrap.ts  index.ts
