[package]
name = "top-robbers"
version = "0.1.0"
description = "Top Robbers Launcher"
authors = ["Neeko"]
license = "GPL-3.0"
repository = "https://github.com/top-robbers/launcher"
homepage = "https://github.com/top-robbers/launcher"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "top_robbers_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["time"] }
tauri-plugin-stronghold = "2"

[profile.dev.package.scrypt]
opt-level = 3

